# hexlet-django-blog

./: Makefile  README.md  pyproject.toml
.archiveDjango/: articles_1.py  articles_2.py  articles_3.py  articles_4.py
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py  0002_comment.py
hexlet_django_blog/templates/: base.html  delete.html  form.html  index.html
hexlet_django_blog/templates/article/: index.html
